Database stopped working, had to change too many things. We blame arvixe. Fixed it up though because we're geniuses

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestDetails.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/ContestDetails.cshtml
@@ -48,7 +48,10 @@
     <caption>Judges</caption>
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Judges.FirstOrDefault().Name)
+            @Html.DisplayNameFor(model => model.Judges.FirstOrDefault().FirstName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Judges.FirstOrDefault().LastName)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Judges.FirstOrDefault().Email)
@@ -61,7 +64,10 @@
     {
         <tr>
             <td>
-                @Html.DisplayFor(x=>item.Name)
+                @Html.DisplayFor(x=>item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(x => item.LastName)
             </td>
             <td>
                 @Html.DisplayFor(x=>item.Email)
