Finished the JavaScript for the Edit and Create forms

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
@@ -3,76 +3,14 @@
     ViewBag.Title = "CreateContest";
 }
 
-@section Scripts{
+@section scripts{
+    <script src="~/JavaScript/Create_Edit_forms.js"></script>
     <style>
         #excelPreview {
             display: none;
         }
     </style>
-    <script>
-        i = 0;
-        $(function () {
-            $('.multi-field-wrapper').each(function () {
 
-                var $wrapper = $('.multi-fields', this);
-
-                $(".add-criteria", $(this)).click(function (e) {
-                    i++;
-                    var criteria = $('.multi-field:first-child', $wrapper).clone(true);
-                    criteria.appendTo($wrapper).find('input').val('').focus();
-                });
-
-
-                $('.multi-field .remove-field', $wrapper).click(function () {
-                    if ($('.multi-field', $wrapper).length > 1)
-                        $(this).parent('.multi-field').remove();
-                });
-            });
-            k = 0;
-            $(function () {
-                $('.multi-field-wrapper').each(function () {
-                    var $judgeWrapper = $('.multi-fields', this);
-
-                    $(".add-judge", $(this)).click(function (e) {
-                        k++;
-                        var judge = $('.multi-field:first-child', $judgeWrapper).clone(true);
-                        judge.appendTo($judgeWrapper).find('input').val('').focus();
-                    });
-
-                    
-                     $('.multi-field .remove-field', $judgeWrapper).click(function () {
-                         if ($('.multi-field', $judgeWrapper).length > 1)
-                             $(this).parent('.multi-field').remove();     
-                         k--;
-                     });
-                 });
-                });
-
-
-                $('#uploadExcel').click(function () {
-                    $('#excelPreview').show();
-                });
-
-                $("#ContestForm").submit(function (e) {
-                    e.preventDefault();
-                    var judgeListItems = $('.judge-list-item');
-                    $(judgeListItems).each(function (index, element) {
-                        var children = $(element).children();
-                        $(children[0]).attr('name', 'judges[' + index + '].firstname');
-                        $(children[1]).attr('name', 'judges[' + index + '].lastname');
-                        $(children[2]).attr('name', 'judges[' + index + '].email');    
-                    })
-                    var criteriaListItems = $('.criteria-list-item');
-                    $(criteriaListItems).each(function (index, element) {
-                        var children = $(element).children();
-                        $(children[0]).attr('name', 'criteria[' + index + '].name');
-                        $(children[1]).attr('name', 'criteria[' + index + '].description');   
-                    });
-                    this.submit();
-                });
-            });
-       
-    </script>
 }
 <h2>Add Contest</h2>
 <form id="ContestForm" role="form" method="post">
