--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/EditContest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/EditContest.cshtml
@@ -4,81 +4,16 @@
     ViewBag.Title = "EditContest";
 }
 
-@
-{
-    
+
    
 <style>
     #excelPreview {
         display: none;
     }
 </style>
-<script>
-        i = 0;
-        $(function () {
-            $('.multi-field-wrapper').each(function () {
-
-                var $wrapper = $('.multi-fields', this);
-
-                $(".add-criteria", $(this)).click(function (e) {
-                    i++;
-                    var criteria = $('.multi-field:first-child', $wrapper).clone(true);
-                    criteria.appendTo($wrapper).find('input').val('').focus();
-                });
-
-
-                $('.multi-field .remove-field', $wrapper).click(function () {
-                    if ($('.multi-field', $wrapper).length > 1)
-                        $(this).parent('.multi-field').remove();
-                });
-            });
-            k = 0;
-            $(function () {
-                $('.multi-field-wrapper').each(function () {
-                    var $judgeWrapper = $('.multi-fields', this);
-
-                    $(".add-judge", $(this)).click(function (e) {
-                        k++;
-                        var judge = $('.multi-field:first-child', $judgeWrapper).clone(true);
-                        judge.appendTo($judgeWrapper).find('input').val('').focus();
-                    });
-
-
-                    $('.multi-field .remove-field', $judgeWrapper).click(function () {
-                        if ($('.multi-field', $judgeWrapper).length > 1)
-                            $(this).parent('.multi-field').remove();
-                        k--;
-                    });
-                });
-            });
-
-
-            $('#uploadExcel').click(function () {
-                $('#excelPreview').show();
-            });
-
-            $("#ContestForm").submit(function (e) {
-                e.preventDefault();
-                var judgeListItems = $('.judge-list-item');
-                $(judgeListItems).each(function (index, element) {
-                    var children = $(element).children();
-                    $(children[0]).attr('name', 'judges[' + index + '].firstname');
-                    $(children[1]).attr('name', 'judges[' + index + '].lastname');
-                    $(children[2]).attr('name', 'judges[' + index + '].email');
-                })
-                var criteriaListItems = $('.criteria-list-item');
-                $(criteriaListItems).each(function (index, element) {
-                    var children = $(element).children();
-                    $(children[0]).attr('name', 'criteria[' + index + '].name');
-                    $(children[1]).attr('name', 'criteria[' + index + '].description');
-                });
-                this.submit();
-            });
-        });
-
-
-
-</script>
+@section scripts{
+    <script src="~/JavaScript/Create_Edit_forms.js"></script>
+@Scripts.Render("~/bundles/jqueryval")
     }
 
 <h2>EditContest</h2>
@@ -134,24 +69,30 @@
         </div>
         <div class="form-group">
             <h3>Judges</h3>
-        </div>
 
+        </div>
         <div class="form-group multi-field-wrapper">
-            @foreach (var item in Model.Judges)
-            {
-                <div class="col-md-10 multi-fields">
+            <button type="button" class="add-judge"> Add Judge</button>
+            <div class="col-md-10 multi-fields">
+                @foreach (var item in Model.Judges)
+                {
+
                     <div class="multi-field judge-list-item">
                         @Html.LabelFor(model => item.FirstName)
-                        @Html.EditorFor(x => item.FirstName, new { htmlAttributes = new { @class = "form-control", @name = "judges[0].firstname"} })
+                        @Html.EditorFor(x => item.FirstName, new { htmlAttributes = new { @class = "form-control", @name = "judges[0].firstname" } })
                         @Html.LabelFor(model => item.LastName)
                         @Html.EditorFor(x => item.LastName, new { htmlAttributes = new { @class = "form-control", @name = "judges[0].lastname" } })
                         @Html.LabelFor(x => item.Email)
                         @Html.EditorFor(x => item.Email, new { htmlAttributes = new { @class = "form-control", @name = "judges[0].email" } })
                         <button type="button" class="remove-field">Remove</button>
                     </div>
+
+                }
                 </div>
-            }
-        </div>
+
+            </div>
+
+
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
@@ -165,6 +106,3 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
