Added some functionality to the edit method

--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/CreateContest.cshtml
@@ -43,7 +43,7 @@
                     <input type="text" name="judges[0].firstname" placeholder="Judge First Name" />
                     <input type="text" name="judges[0].lastname" placeholder="Judge Last Name" />
                     <input type="text" name="judges[0].email" placeholder="Judge Email" />
-                    <button type="button" class="remove-field">Remove</button>
+                    <button type="button" class="judge-remove-field">Remove</button>
                 </div>
             </div>
             <button type="button" class="add-judge"> Add Judge</button>
