--- a/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/EditContest.cshtml
+++ b/Documents/Visual Studio 2015/Projects/Felix_Riipen/Riipen_SSD/Riipen_SSD/Views/Admin/EditContest.cshtml
@@ -19,7 +19,7 @@
 <h2>EditContest</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm(null, null, FormMethod.Post, new { id = "ContestForm" }))
 {
     @Html.AntiForgeryToken()
 
@@ -56,45 +56,38 @@
         <div class="form-group">
             <h3>Criteria</h3>
         </div>
-        <div class="form-group multi-field-wrapper">
-            <button type="button" class="add-criteria"> Add Criteria</button>
-            <div class="multi-fields criteria-list-item">
-            @foreach (var item in Model.Criteria)
-            {
-                <div class="col-md-10 multi-field criteria-list-item-list-item">
-                    @Html.LabelFor(model => model.Criteria)
-                    @Html.EditorFor(x => item.Name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.LabelFor(model => item.Description)
-                    @Html.EditorFor(x => item.Description, new { htmlAttributes = new { @class = "form-control" } })
-                    <button type="button" class="remove-field">Remove</button>
-                 </div>
-            }
+        <div class="multi-field-wrapper">
+            <div class="multi-fields" id="criteria-list">
+                @foreach (var item in Model.Criteria)
+                {
+                <div class="multi-field criteria-list-item">
+                    <input type="text" name="criteria[0].name" placeholder="New Criteria" value="@item.Name" />
+                    <input type="text" name="criteria[0].description" placeholder="Criteria Description" value="@item.Description" />
+                    <button type="button" class="remove-field"> Remove </button>
+                </div>
+                }
             </div>
+            <button type="button" class="add-criteria"> Add Criteria</button>
         </div>
+
         <div class="form-group">
             <h3>Judges</h3>
 
         </div>
-        <div class="form-group multi-field-wrapper">
-            <button type="button" class="add-judge"> Add Judge</button>
-            <div class="col-md-10 multi-fields">
+        <div class="multi-field-wrapper">
+            <div class="multi-fields">
                 @foreach (var item in Model.Judges)
                 {
-
-                    <div class="multi-field judge-list-item">
-                        @Html.LabelFor(model => item.FirstName)
-                        @Html.EditorFor(x => item.FirstName, new { htmlAttributes = new { @class = "form-control", @name = "judges[0].firstname" } })
-                        @Html.LabelFor(model => item.LastName)
-                        @Html.EditorFor(x => item.LastName, new { htmlAttributes = new { @class = "form-control", @name = "judges[0].lastname" } })
-                        @Html.LabelFor(x => item.Email)
-                        @Html.EditorFor(x => item.Email, new { htmlAttributes = new { @class = "form-control", @name = "judges[0].email" } })
-                        <button type="button" class="judge-remove-field">Remove</button>
-                    </div>
-
-                }
+                <div class="multi-field judge-list-item">
+                    <input type="text" name="judges[0].firstname" placeholder="Judge First Name" value="@item.FirstName" />
+                    <input type="text" name="judges[0].lastname" placeholder="Judge Last Name" value="@item.LastName" />
+                    <input type="text" name="judges[0].email" placeholder="Judge Email" value="@item.Email"/>
+                    <button type="button" class="judge-remove-field">Remove</button>
                 </div>
-
+                }
             </div>
+            <button type="button" class="add-judge"> Add Judge</button>
+        </div>
 
 
 
